--- a/css/wc22/wc22-dana.css
+++ b/css/wc22/wc22-dana.css
@@ -13,7 +13,7 @@
 
 .review-heading {
     font-size: 40px;
-    line-height: 48px;
+    line-height: 48px!important;
     text-transform: uppercase;
     color: #334155;
 }
@@ -115,7 +115,7 @@
 
     .review-heading {
         font-size: 20px;
-        line-height: 24px;
+        line-height: 24px!important;
     }
     
     .review-text {
@@ -145,7 +145,7 @@
 
     .review-heading {
         font-size: 16px;
-        line-height: 20px;
+        line-height: 20px!important;
     }
     
     .review-text {
