1239 prediction add disabled to the input

--- a/css/wc22/wc22-jemson.css
+++ b/css/wc22/wc22-jemson.css
@@ -30,6 +30,10 @@
 .dd-wrap * {
 	cursor: pointer;
 }
+.dd-wrap.dd-disabled{
+	pointer-events: none;
+	opacity: 0.8;
+}
 .match-lbl-wrap{
 	display: flex;
     align-items: center;
