--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -2,7 +2,7 @@
 	<h3 class="bracket-title" data-txt="txt21"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a" data-item="49">
+		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a,b" data-item="49">
 			
 			<div class="dd-selected placeholder">
 				<input type="text" />
