--- a/css/wc22/wc22-dana.css
+++ b/css/wc22/wc22-dana.css
@@ -1,3 +1,4 @@
+/* REVIEW SUBSECTION */
 .review-content-wrapper {
     margin: 0 25px;
     font-family: 'Lato', sans-serif;
@@ -191,4 +192,158 @@
     .review-heading:first-child {
         margin-bottom: 24px;
     }
+}
+/* END OF REVIEW SUB SECTION */
+
+/* WORLD CUP STADIUM POPUP */
+.flex-horizontal .scale-image:hover {
+    cursor: pointer;
+}
+.popup-stadium {
+    display: none;
+	position: fixed; /* Stay in place */
+	z-index: 99; /* Sit on top */
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	background-color: #1A202C; /* Fallback color */
+	background-color: rgba(26, 32, 44, 0.8); /* Black w/ opacity */
+}
+
+.popup-stadium > div {
+	background-color: #FFFFFF;
+	border-radius: 16px;
+	max-width: 720px;
+	margin: 90px auto 0;
+    height: 632px;
+}
+
+.popup-stadium div > .popup-stadium-title {
+	font-size: 16px;
+    line-height: 20px;
+	font-weight: 700;
+	color: #222939;
+	padding: 32px 32px 24px 32px;
+	border-bottom: 1px solid #E9EAEB;
+	text-transform: uppercase;
+	display: flex;
+	justify-content: space-between;
+}
+
+.popup-stadium-close {
+    cursor: pointer;
+}
+
+.popup-stadium-content {
+    padding: 32px;
+}
+
+.popup-stadium-top {
+    display: inline-flex;
+    gap: 24px;
+    margin-bottom: 24px;
+}
+
+.popup-stadium-big-img {
+    width: 50%;
+    height: 318px;
+    object-fit: cover;
+    border-radius: 16px;
+}
+
+.popup-stadium-text {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    width: 50%;
+}
+
+.popup-stadium-other {
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    font-size: 20px;
+    list-style: 24px;
+    font-weight: 700;
+    margin-bottom: 14px;
+}
+
+.popup-stadium-swiper {
+    gap: 12px;
+}
+
+.popup-stadium-swiper-img-cont {
+    gap: 12px;
+}
+
+.popup-stadium-slide {
+    flex-shrink: unset!important;
+    cursor: pointer;
+    width: 192px;
+    height: 110px;
+}
+
+.popup-stadium-slide img {
+    width: 192px;
+    height: 110px;
+    border-radius: 16px;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+.popup-stadium-prev, .popup-stadium-next {
+    display: unset;
+} 
+
+.popup-stadium-next::after {
+    position: absolute;
+    margin-top: -29px;
+    margin-left: -6px;
+}
+
+.popup-stadium-prev::after {
+    position: absolute;
+    margin-top: -31px;
+    margin-left: -6px;
+}
+
+@media (max-width: 720px){
+    .popup-stadium div > .popup-stadium-title {
+        border-bottom: none;
+    }
+
+    .popup-stadium-content {
+        padding-top: 10px;
+    }
+
+    .popup-stadium-text {
+        font-size: 12px;
+    }
+
+    .popup-stadium-top {
+        display: block;
+    }
+
+    .popup-stadium-big-img {
+        width: 100%;
+        margin-bottom: 24px;
+    }
+    
+    .popup-stadium-text {
+        width: 100%;
+    }
+
+    .popup-stadium-other {
+        font-size: 16px;
+    }
+
+    .popup-stadium-swiper-img-cont {
+        flex-wrap: unset;
+    }
+
+    .popup-stadium-prev, .popup-stadium-next {
+        display: none;
+    }
+
 }
