03215 prediction adding the submit of prediction

--- a/css/wc22/wc22-jemson.css
+++ b/css/wc22/wc22-jemson.css
@@ -526,6 +526,7 @@
 }
 .cta-area .btn.btn--red.inactive{
 	background: var(--torch-red);
+	pointer-events: none;
 }
 @media (min-width: 768px) {
 	.bracket.finals {
