--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -12,7 +12,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="b" data-item="50">
+		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="b,a" data-item="50">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -24,7 +24,7 @@
 	</div>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="c" data-item="51">
+		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="e,f" data-item="53">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -33,7 +33,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="d" data-item="52">
+		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="g,h" data-item="54">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -48,7 +48,7 @@
 	<!-- <h3 class="bracket-title" data-txt="txt22"></h3> -->
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b" data-item="57">
+		<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b,c,d" data-item="57">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -57,7 +57,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="c,d" data-item="58">
+		<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="e,f,g,h" data-item="58">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -73,7 +73,7 @@
 		<!-- <h3 class="bracket-title" data-txt="txt23"></h3> -->
 		<div class="match-bracket">
 			<div class="bracket-line"><span></span></div>
-			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="a,b,c,d">
+			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="a,b,c,d,e,f,g,h" data-item="61">
 				<div class="dd-selected placeholder">
 					<input type="text" />
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -82,7 +82,7 @@
 					<div class="scrollbar-inner list"></div>
 				</div>
 			</div>
-			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2"  data-groups="e,f,g,h">
+			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2"  data-groups="b,a,d,c,f,e,h,g" data-item="62">
 				<div class="dd-selected placeholder">
 					<input type="text" />
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -96,7 +96,7 @@
 	<div class="bracket champion">
 		<div class="dd-champ-wrap">
 			<!-- <h3 class="bracket-title" data-txt="txt24"></h3> -->
-			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f">
+			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f,g,h" data-item="64">
 				<div class="dd-selected placeholder">
 					<input type="text" />
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -113,7 +113,7 @@
 	<!-- <h3 class="bracket-title" data-txt="txt22"></h3> -->
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-target="e-semi-1" data-groups="g,h" data-item="59">
+		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-target="e-semi-1" data-groups="b,a,d,c" data-item="59">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -122,7 +122,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="f,e" data-item="60">
+		<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="f,e,g,h" data-item="60">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -137,7 +137,7 @@
 	<!-- <h3 class="bracket-title" data-txt="txt21"></h3> -->
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="g" data-item="53">
+		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="b,a" data-item="51">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -146,7 +146,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="h" data-item="54">
+		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="d,c" data-item="52">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -158,7 +158,7 @@
 	</div>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="f" data-item="55">
+		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="f,e" data-item="55">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -167,7 +167,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="e" data-item="56">
+		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="h,g" data-item="56">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
