--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -45,7 +45,7 @@
 	</div>
 </div>
 <div class="bracket semi-finals west">
-	<!-- <h3 class="bracket-title" data-txt="txt22"></h3> -->
+	<h3 class="bracket-title" data-txt="txt22"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b,c,d" data-item="57">
@@ -70,7 +70,7 @@
 </div>
 <div class="middle-wrap">
 	<div class="bracket finals">
-		<!-- <h3 class="bracket-title" data-txt="txt23"></h3> -->
+		<h3 class="bracket-title" data-txt="txt23"></h3>
 		<div class="match-bracket">
 			<div class="bracket-line"><span></span></div>
 			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="a,b,c,d,e,f,g,h" data-item="61">
@@ -82,7 +82,7 @@
 					<div class="scrollbar-inner list"></div>
 				</div>
 			</div>
-			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2"  data-groups="b,a,d,c,f,e,h,g" data-item="62">
+			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2" data-groups="b,a,d,c,f,e,h,g" data-item="62">
 				<div class="dd-selected placeholder">
 					<input type="text" />
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -95,7 +95,7 @@
 	</div>
 	<div class="bracket champion">
 		<div class="dd-champ-wrap">
-			<!-- <h3 class="bracket-title" data-txt="txt24"></h3> -->
+			<h3 class="bracket-title" data-txt="txt24"></h3>
 			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f,g,h" data-item="64">
 				<div class="dd-selected placeholder">
 					<input type="text" />
@@ -110,10 +110,10 @@
 	</div>
 </div>
 <div class="bracket semi-finals east">
-	<!-- <h3 class="bracket-title" data-txt="txt22"></h3> -->
+	<h3 class="bracket-title" data-txt="txt22"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-target="e-semi-1" data-groups="b,a,d,c" data-item="59">
+		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-groups="b,a,d,c" data-item="59">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -134,7 +134,7 @@
 	</div>
 </div>
 <div class="bracket quarter-finals east">
-	<!-- <h3 class="bracket-title" data-txt="txt21"></h3> -->
+	<h3 class="bracket-title" data-txt="txt21"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="b,a" data-item="51">
