--- a/views/pred-dd-mobile.html
+++ b/views/pred-dd-mobile.html
@@ -4,7 +4,7 @@
 		<div class="match-bracket-wrap quarter-finals">
 			<div class="bracket-line"><span></span></div>
 			<div class="match-bracket">
-				<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="f,a,b,c">
+				<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a,b" data-item="49">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -13,7 +13,7 @@
 						<div class="scrollbar-inner list"></div>
 					</div>
 				</div>
-				<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="d,e">
+				<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1"  data-groups="b,a" data-item="50">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -24,7 +24,7 @@
 				</div>
 			</div>
 			<div class="match-bracket">
-				<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="b,a,d,e,f">
+				<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="e,f" data-item="53">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -33,7 +33,7 @@
 						<div class="scrollbar-inner list"></div>
 					</div>
 				</div>
-				<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="a,c">
+				<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="g,h" data-item="54">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -50,7 +50,7 @@
 		<div class="match-bracket-wrap quarter-finals">
 			<div class="bracket-line"><span></span></div>
 			<div class="match-bracket">
-				<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="c,d,e,f">
+				<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="b,a" data-item="51">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -59,7 +59,7 @@
 						<div class="scrollbar-inner list"></div>
 					</div>
 				</div>
-				<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="a,b">
+				<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="d,c" data-item="52">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -70,7 +70,7 @@
 				</div>
 			</div>
 			<div class="match-bracket">
-				<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="e,a,b,c,d">
+				<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="f,e" data-item="55">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -79,7 +79,7 @@
 						<div class="scrollbar-inner list"></div>
 					</div>
 				</div>
-				<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="d,f">
+				<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="h,g" data-item="56">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -98,7 +98,7 @@
 		<div class="bracket semi-finals">
 			<h3 class="bracket-title" data-txt="txt22"></h3>
 			<div class="match-bracket">
-				<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="f,a,b,c,d,e">
+				<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b,c,d" data-item="57">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -107,7 +107,7 @@
 						<div class="scrollbar-inner list"></div>
 					</div>
 				</div>
-				<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="b,a,d,e,f,c">
+				<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="e,f,g,h" data-item="58">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -121,7 +121,7 @@
 		<div class="bracket semi-finals">
 			<h3 class="bracket-title" data-txt="txt22"></h3>
 			<div class="match-bracket">
-				<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-groups="c,d,e,f,a,b">
+				<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-groups="b,a,d,c" data-item="59">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -130,7 +130,7 @@
 						<div class="scrollbar-inner list"></div>
 					</div>
 				</div>
-				<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="e,a,b,c,d,f">
+				<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="f,e,g,h" data-item="60">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -149,7 +149,7 @@
 		<div class="bracket finals">
 			<h3 class="bracket-title" data-txt="txt23"></h3>
 			<div class="match-bracket">
-				<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="f,a,b,c,d,e">
+				<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="a,b,c,d,e,f,g,h" data-item="61">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -158,7 +158,7 @@
 						<div class="scrollbar-inner list"></div>
 					</div>
 				</div>
-				<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2" data-groups="c,d,e,f,a,b">
+				<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2" data-groups="b,a,d,c,f,e,h,g" data-item="62">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 					</div>
@@ -175,7 +175,7 @@
 	<div class="bracket champion">
 		<div class="dd-champ-wrap">
 			<h3 class="bracket-title" data-txt="txt24"></h3>
-			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f">
+			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f,g,h" data-item="64">
 				<div class="dd-selected placeholder">
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 				</div>
@@ -187,4 +187,4 @@
 		</div>
 	</div>
 </div>
-<img src="assets/images/logo-uefa.png" class="logo-uefa" />
+<img src="assets/images/prediction/logo-wc22.png" class="logo-wc22" />
