--- a/views/pred-dd-mobile.html
+++ b/views/pred-dd-mobile.html
@@ -1,9 +1,8 @@
 <div>
 	<div class="bracket quarter-finals">
-		<h3 class="bracket-title" data-txt="txt21"></h3>
 		<div class="match-bracket-wrap quarter-finals">
-			<div class="bracket-line"><span></span></div>
 			<div class="match-bracket">
+				<div class="bracket-line"><span></span></div>
 				<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a,b" data-item="49">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -23,7 +22,12 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class="bracket quarter-finals">
+		<div class="match-bracket-wrap quarter-finals">
 			<div class="match-bracket">
+				<div class="bracket-line"><span></span></div>
 				<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="e,f" data-item="53">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -46,10 +50,9 @@
 		</div>
 	</div>
 	<div class="bracket quarter-finals">
-		<h3 class="bracket-title" data-txt="txt21"></h3>
 		<div class="match-bracket-wrap quarter-finals">
-			<div class="bracket-line"><span></span></div>
 			<div class="match-bracket">
+				<div class="bracket-line"><span></span></div>
 				<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="b,a" data-item="51">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -69,7 +72,12 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class="bracket quarter-finals">
+		<div class="match-bracket-wrap quarter-finals">
 			<div class="match-bracket">
+				<div class="bracket-line"><span></span></div>
 				<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="f,e" data-item="55">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -94,10 +102,9 @@
 </div>
 <div>
 	<div class="match-bracket-wrap semi-finals">
-		<div class="bracket-line"><span></span></div>
 		<div class="bracket semi-finals">
-			<h3 class="bracket-title" data-txt="txt22"></h3>
 			<div class="match-bracket">
+				<div class="bracket-line"><span></span></div>
 				<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b,c,d" data-item="57">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -119,8 +126,8 @@
 			</div>
 		</div>
 		<div class="bracket semi-finals">
-			<h3 class="bracket-title" data-txt="txt22"></h3>
 			<div class="match-bracket">
+				<div class="bracket-line"><span></span></div>
 				<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-groups="b,a,d,c" data-item="59">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -145,9 +152,7 @@
 </div>
 <div>
 	<div class="match-bracket-wrap finals">
-		<div class="bracket-line"><span></span></div>
 		<div class="bracket finals">
-			<h3 class="bracket-title" data-txt="txt23"></h3>
 			<div class="match-bracket">
 				<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="a,b,c,d,e,f,g,h" data-item="61">
 					<div class="dd-selected placeholder">
@@ -187,4 +192,3 @@
 		</div>
 	</div>
 </div>
-<img src="assets/images/prediction/logo-wc22.png" class="logo-wc22" />
