--- a/css/wc22/wc22.css
+++ b/css/wc22/wc22.css
@@ -184,7 +184,7 @@ iframe {
 	background: -o-linear-gradient(338.85deg, #121C79 0%, #AF0A3B 100%);
 	background: linear-gradient(111.15deg, #121C79 0%, #AF0A3B 100%);
 	position: relative;
-	overflow: hidden;
+	/* overflow: hidden; */
 	padding-bottom: 48px;
 }
 .wc22-tab-items__item--1__items:before {
